--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hariseon Social Solution Services</title>
 </head>
 
@@ -24,7 +24,9 @@
             </ul>
         </div>
     </header>
-    <nav class="hero"></nav>
+    <nav>
+        <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="ppl gathering at a meeting.">
+    </nav>
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of search-engine-optimization." class="float-left" />
