added comment to explain what i did

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
         </div>
     </header>
+    <!-- i changed <div> to <header> to make it more accessible -->
     <nav>
         <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="ppl gathering at a meeting.">
     </nav>
