--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <nav>
         <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="ppl gathering at a meeting.">
     </nav>
+    <!-- i changed <div> to <nav> which made the code easier to understand. -->
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of search-engine-optimization." class="float-left" />
@@ -51,6 +52,7 @@
             </p>
         </article>
     </section>
+    <!-- changed <div> to <section> -->
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
