i added more comments

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </p>
         </aside>
     </aside>
+    <!-- changed <div> to <aside> -->
 </body>  
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
